syntax = "proto3";

import "google/protobuf/empty.proto";

package pb;

option go_package = "internal/infra/grpc/gen/pb";

message CreateOrderRequest {
  string customer_name = 1;
  repeated string items = 2;
  int32 amount = 3;
}

message Order {
  string id = 1;
  string customer_name = 2;
  string status = 3;
  int32 amount = 4;
  repeated string items = 5;
}

message OrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  string customer_name = 1;
  string status = 2;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string customer_name = 2;
  string status = 3;
  int32 amount = 4;
  repeated string items = 5;
}

message DeleteOrderRequest {
  string id = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (OrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (google.protobuf.Empty);
}